# groundcheck

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  Makefile  README.md  SEEDING.md  SKILL.md  docker-compose.yml  llms.txt  package-lock.json  package.json  requirements.txt  server.json  vercel.json
.github/workflows/: deploy-hetzner.yml  publish-mcp.yml  tests.yml
api/: index.py
assets/: build-og.py  og.html
docs/: attested-receipts.md  delivery-attestation.md  narrative-detector.md  x402.md
drafts/: devto.md  listings.md  reddit.md  twitter.md
engine/: Dockerfile  basetx.json  pyproject.toml  requirements.txt
engine/calibration/: calibration.json  seed_claims.jsonl
engine/groundcheck_engine/: __init__.py  __main__.py  app.py  atoms.py  attest.py  config.py  conformal.py  delivery.py  ensemble.py  funnel.py  instruments.py  landing.py  llms.txt  mcp_http.py  models.py  provenance.py  retrieval.py  stance.py  verdict.py  x402.py
engine/scripts/: calibrate.py
engine/tests/: conftest.py  test_atoms.py  test_attest.py  test_circuitbreaker.py  test_conformal.py  test_delivery.py  test_discovery.py  test_ensemble.py  test_funnel.py  test_instruments.py  test_mcp_http.py  test_models.py  test_provenance.py  test_providers.py  test_quality.py  test_ratelimit.py  test_retrieval.py  test_stance_parse.py  test_verdict.py  test_x402.py  test_x402_cdp.py
scripts/: buyer_bootstrap.py
server/: README.md  package-lock.json  package.json  tsconfig.json
src/: attribution.js  search.js  server.js  stance.js  verdict.js
test/: verdict.test.js
(+5 files in other folders)
