[project]
name = "groundcheck-engine"
version = "0.2.0"
description = "Evidence + verdict engine for Groundcheck (retrieval, stance classification, verdict)."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = [".", "vendor"]
testpaths = ["tests"]
asyncio_mode = "auto"
