[project]
name = "groundcheck-engine"
license = { text = "MIT" }
version = "0.3.0"
description = "Evidence + verdict engine for Groundcheck (retrieval, stance classification, verdict)."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
# CDP mainnet facilitator auth (per-request JWT). Only needed when
# GROUNDCHECK_X402_CDP_KEY_ID/SECRET are set; imported lazily otherwise.
cdp = ["cdp-sdk>=1.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
